# groth16-zorch

./: .bazelrc  .bazelrc.ci  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE.bazel  pyproject.toml  requirements.in  requirements_lock_3_11.txt  requirements_rocm.in  requirements_rocm_lock_3_11.txt
.claude/knowledge/: architecture.md  testing-guide.md
.github/: actionlint.yaml
.github/workflows/: benchmark-trigger.yml  benchmark.yml  ci.yml  frx-update.yml  jax-update.yml  pin-bump.yml  publish.yml  release.yml  sync-project.yml
benchmark/: BUILD.bazel  CONTRACT.md  __init__.py  primitives_benchmark.py  runner.py  sp1_groth16.py
benchmark/remote/: Dockerfile.cuda  Dockerfile.rocm  _run_one.py  bench_config.amd-gfx942.yaml  bench_config.nvidia-sm100.yaml  bench_config.nvidia-sm120.yaml  bench_config.nvidia-sm80.yaml  bench_config.nvidia-sm90.yaml  bench_config.sp1-ref-cuda.yaml  image_build.sh  merge_results.py  run_local.sh
benchmark/testing/: benchmark_smoke_test.py
groth16_zorch/: BUILD.bazel  __init__.py  cli.py  r1cs.py
groth16_zorch/circom/: __init__.py  zkey_to_terms.py
groth16_zorch/circom/base/: __init__.py  buffer.py  modulus.py  sections.py
groth16_zorch/circom/wtns/: __init__.py  wtns.py
groth16_zorch/circom/zkey/: __init__.py  coefficient.py  verifying_key.py  zkey.py
groth16_zorch/gnark/: __init__.py  loader.py  types.py
groth16_zorch/groth16/: __init__.py  proof.py  prover.py  verifier.py
rabbitsnark/: BUILD.bazel  __init__.py  cli.py  r1cs.py
rabbitsnark/circom/: __init__.py  compute_az_bz.py  witness_calculator.py  zkey_to_csr.py  zkey_to_terms.py
rabbitsnark/circom/base/: __init__.py  buffer.py  montgomery.py  sections.py
rabbitsnark/circom/wtns/: __init__.py  wtns.py
rabbitsnark/circom/zkey/: coefficient.py  verifying_key.py  zkey.py
rabbitsnark/gnark/: __init__.py  compute_abc.py  loader.py  solutions.py  types.py
rabbitsnark/groth16/: __init__.py  proof.py  prover.py  verifier.py
rabbitsnark/msm/: __init__.py  msm.py  msm_bn254.py  pippenger.py
rabbitsnark/ntt/: __init__.py  coset.py  ntt.py
rabbitsnark/r1cs_solver/: __init__.py  solver.py
rabbitsnark/spmv/: __init__.py  backend.py  csr_matrix.py  r1cs.py  sell.py  spmv.py
scripts/: export_ntt_stablehlo.py  sp1_e2e.py
tests/: BUILD.bazel  __init__.py  e2e_test.py  groth16_test.py  groth16_verify_test.py  msm_test.py  ntt_test.py  sell_test.py  spmv_test.py  test_zkey.py  wtns_test.py  zkey_test.py
tests/circom/: BUILD.bazel  e2e_circuit_test.py  e2e_test.py  groth16_verify_test.py  testutil.py  wtns_test.py  zkey_test.py
tests/circom/data/: multiplier_3_proof.json
tests/data/: multiplier_3_public.json
tests/gnark/: BUILD.bazel  e2e_test.py  groth16_verify_test.py  loader_test.py
tests/gnark/data/tiny_multiply/: metadata.json  proof.json  public.json
tests/gnark/gen_fixture/: README.md  go.mod  main.go
