# Copyright 2026 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

workspace(name = "rabbitsnark")

# --- Phase 1: r1cs-solver + prime_ir ---

load("//third_party/r1cs_solver:workspace.bzl", r1cs_solver = "repo")

r1cs_solver()

load(
    "@r1cs_solver//bazel:r1cs_solver_deps.bzl",
    r1cs_solver_cpp_deps = "cpp_deps",
    r1cs_solver_llvm = "llvm",
    r1cs_solver_prime_ir = "prime_ir",
)

r1cs_solver_prime_ir()

load("@prime_ir//bazel:prime_ir_deps.bzl", "prime_ir_deps")

prime_ir_deps()

# --- Phase 2: zk_dtypes + its deps ---

load("//third_party/zk_dtypes:workspace.bzl", zk_dtypes = "repo")

zk_dtypes()

r1cs_solver_cpp_deps()

# --- Phase 3: LLVM ---

load(
    "@prime_ir//third_party/llvm-project:workspace.bzl",
    "LLVM_COMMIT",
    "LLVM_PATCHES",
    "LLVM_SHA256",
)

r1cs_solver_llvm(LLVM_COMMIT, LLVM_SHA256, LLVM_PATCHES)

load("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")

llvm_configure(name = "llvm-project")

# --- Hermetic Python ---

load("@zk_dtypes//third_party/py:python_init_rules.bzl", "python_init_rules")

python_init_rules()

load("@zk_dtypes//third_party/py:python_init_repositories.bzl", "python_init_repositories")

python_init_repositories(
    requirements = {
        "3.11": "//:requirements_lock_3_11.txt",
    },
)

load("@zk_dtypes//third_party/py:python_init_toolchains.bzl", "python_init_toolchains")

python_init_toolchains()

load("@zk_dtypes//third_party/py:python_init_pip.bzl", "python_init_pip")

python_init_pip()

load("@pypi//:requirements.bzl", "install_deps")

install_deps()

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()
