# Copyright 2026 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

workspace(name = "rabbitsnark")

# --- zk_dtypes (BN254 dtypes + hermetic Python / pip bootstrap macros) ---

load("//third_party/zk_dtypes:workspace.bzl", zk_dtypes = "repo")

zk_dtypes()

# --- Hermetic Python ---

load("@zk_dtypes//third_party/py:python_init_rules.bzl", "python_init_rules")

python_init_rules()

load("@zk_dtypes//third_party/py:python_init_repositories.bzl", "python_init_repositories")

python_init_repositories(
    requirements = {
        "3.11": "//:requirements_lock_3_11.txt",
    },
)

load("@zk_dtypes//third_party/py:python_init_toolchains.bzl", "python_init_toolchains")

python_init_toolchains()

load("@zk_dtypes//third_party/py:python_init_pip.bzl", "python_init_pip")

python_init_pip()

load("@pypi//:requirements.bzl", "install_deps")

install_deps()

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()
