# Copyright 2026 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "runner",
    srcs = [
        "__init__.py",
        "runner.py",
    ],
    data = ["@r1cs_solver//solver:libr1cs_solver.so"],
    visibility = ["//visibility:public"],
    deps = [
        "//rabbitsnark:gnark",
        "//rabbitsnark:groth16",
        "@pypi//jax",
    ],
)

py_binary(
    name = "sp1_groth16",
    srcs = ["sp1_groth16.py"],
    tags = [
        "benchmark",
        "require-gpu",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":runner",
        "@pypi//zkbench",
    ],
)
