# Copyright 2026 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "sp1_groth16_lib",
    srcs = ["sp1_groth16.py"],
    deps = [
        "//rabbitsnark:gnark",
        "//rabbitsnark:groth16",
        "@pypi//jax",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
        "@pypi//zkbench",
    ],
)

py_binary(
    name = "sp1_groth16",
    srcs = ["sp1_groth16.py"],
    tags = [
        "benchmark",
        "require-gpu",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":sp1_groth16_lib",
        "@pypi//zkx_cuda_pjrt",
    ],
)

py_library(
    name = "primitives_benchmark_lib",
    srcs = ["primitives_benchmark.py"],
    deps = [
        "@pypi//jax",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
        "@pypi//zkbench",
    ],
)

py_binary(
    name = "primitives_benchmark",
    srcs = ["primitives_benchmark.py"],
    tags = [
        "benchmark",
        "require-gpu",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":primitives_benchmark_lib",
        "@pypi//zkx_cuda_pjrt",
    ],
)

py_test(
    name = "benchmark_smoke_test",
    srcs = ["testing/benchmark_smoke_test.py"],
    tags = ["gpu"],
    deps = [
        ":primitives_benchmark_lib",
        "@pypi//absl_py",
        "@pypi//zkbench",
    ],
)
