# Copyright 2026 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "ntt_test",
    srcs = ["ntt_test.py"],

    deps = [
        "//rabbitsnark:ntt",
        "@pypi//absl_py",
        "@pypi//jax",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
    ],
)
