# Copyright 2026 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_python//python:defs.bzl", "py_library", "py_test")

filegroup(
    name = "testdata",
    srcs = glob(["data/**"]),
)

py_library(
    name = "testutil",
    srcs = ["testutil.py"],
    deps = [
        "@pypi//jax",
        "@pypi//zk_dtypes",
    ],
)

py_test(
    name = "wtns_test",
    srcs = ["wtns_test.py"],
    data = [":testdata"],
    deps = [
        "//rabbitsnark:circom_wtns",
        "@pypi//absl_py",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
    ],
)

py_test(
    name = "zkey_test",
    srcs = ["zkey_test.py"],
    data = [":testdata"],
    deps = [
        "//rabbitsnark:circom_zkey",
        "@pypi//absl_py",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
    ],
)

py_test(
    name = "groth16_verify_test",
    srcs = ["groth16_verify_test.py"],
    # TODO(b/369): Remove manual tag when jaxlib 0.0.5 is released.
    # Requires lax.msm (CPU) and lax.pairing_check (CPU) from jaxlib >= 0.0.5.
    tags = ["manual"],
    data = [":testdata"],
    deps = [
        "//rabbitsnark:circom_zkey",
        "//rabbitsnark:groth16",
        "@pypi//absl_py",
        "@pypi//jax",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
    ],
)

_E2E_DEPS = [
    ":testutil",
    "//rabbitsnark:circom_wtns",
    "//rabbitsnark:circom_zkey",
    "//rabbitsnark:groth16",
    "@pypi//absl_py",
    "@pypi//jax",
    "@pypi//numpy",
    "@pypi//zk_dtypes",
]

py_test(
    name = "e2e_test",
    srcs = ["e2e_test.py"],
    # TODO(b/369): Remove manual tag when jaxlib 0.0.5 is released.
    # Requires lax.msm (CPU) and lax.pairing_check (CPU) from jaxlib >= 0.0.5.
    tags = ["manual"],
    data = [":testdata"],
    deps = _E2E_DEPS,
)

py_test(
    name = "e2e_gpu_test",
    srcs = ["e2e_test.py"],
    data = [":testdata"],
    env = {"JAX_PLATFORMS": "cpu,cuda"},
    main = "e2e_test.py",
    tags = ["gpu"],
    deps = _E2E_DEPS + ["@pypi//zkx_cuda_pjrt"],
)
