# Copyright 2026 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_python//python:defs.bzl", "py_test")

filegroup(
    name = "testdata",
    srcs = glob(["data/**"]),
)

py_test(
    name = "wtns_test",
    srcs = ["wtns_test.py"],
    data = [":testdata"],
    deps = [
        "//rabbitsnark:circom_wtns",
        "@pypi//absl_py",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
    ],
)

py_test(
    name = "zkey_test",
    srcs = ["zkey_test.py"],
    data = [":testdata"],
    deps = [
        "//rabbitsnark:circom_zkey",
        "@pypi//absl_py",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
    ],
)

py_test(
    name = "groth16_verify_test",
    srcs = ["groth16_verify_test.py"],
    data = [":testdata"],
    # verify() uses lax.msm which has GPU-only thunk in jax_fork; cuda
    # must be the default device (listed first) so the call lands on
    # GPU rather than the unimplemented CPU path.
    env = {
        "JAX_PLATFORMS": "cuda,cpu",
        "XLA_PYTHON_CLIENT_PREALLOCATE": "false",
    },
    tags = ["gpu"],
    deps = [
        "//rabbitsnark:circom_zkey",
        "//rabbitsnark:groth16",
        "@pypi//absl_py",
        "@pypi//jax",
        "@pypi//jax_cuda12_plugin",
        "@pypi//jax_cuda12_pjrt",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
    ],
)

_SOLVER_SO = "@r1cs_solver//solver:libr1cs_solver.so"

_E2E_DATA = [
    ":testdata",
    _SOLVER_SO,
]

_E2E_DEPS = [
    "//rabbitsnark:circom_wtns",
    "//rabbitsnark:circom_zkey",
    "//rabbitsnark:groth16",
    "//rabbitsnark:r1cs_solver",
    "@pypi//absl_py",
    "@pypi//numpy",
    "@pypi//zk_dtypes",
]

py_test(
    name = "e2e_test",
    srcs = ["e2e_test.py"],
    data = _E2E_DATA,
    # prove() + verify() use GPU-only lax.msm / lax.ntt in jax_fork;
    # cuda must be default (listed first) so the calls land on GPU.
    env = {
        "JAX_PLATFORMS": "cuda,cpu",
        "XLA_PYTHON_CLIENT_PREALLOCATE": "false",
    },
    tags = ["gpu"],
    deps = _E2E_DEPS + ["@pypi//jax_cuda12_plugin", "@pypi//jax_cuda12_pjrt"],
)

py_test(
    name = "e2e_gpu_test",
    srcs = ["e2e_test.py"],
    data = _E2E_DATA,
    env = {
        "JAX_PLATFORMS": "cuda,cpu",
        "XLA_PYTHON_CLIENT_PREALLOCATE": "false",
    },
    main = "e2e_test.py",
    tags = ["gpu"],
    deps = _E2E_DEPS + ["@pypi//jax_cuda12_plugin", "@pypi//jax_cuda12_pjrt"],
)

_CIRCUIT_DATA = [
    ":testdata",
    _SOLVER_SO,
    "//third_party/circom_circuits:libmultiplier_3.so",
]

_CIRCUIT_DEPS = [
    "//rabbitsnark:circom_witness_calculator",
    "//rabbitsnark:circom_zkey",
    "//rabbitsnark:groth16",
    "//rabbitsnark:r1cs_solver",
    "@pypi//absl_py",
    "@pypi//numpy",
    "@pypi//zk_dtypes",
]

py_test(
    name = "e2e_circuit_test",
    srcs = ["e2e_circuit_test.py"],
    data = _CIRCUIT_DATA,
    deps = _CIRCUIT_DEPS,
)
