# Copyright 2026 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_python//python:defs.bzl", "py_test")

filegroup(
    name = "testdata",
    srcs = glob(["data/**"]),
)

py_test(
    name = "loader_test",
    srcs = ["loader_test.py"],
    data = [":testdata"],
    deps = [
        "//rabbitsnark:gnark",
        "@pypi//absl_py",
        "@pypi//numpy",
        "@pypi//zk_dtypes",
    ],
)

py_test(
    name = "groth16_verify_test",
    srcs = ["groth16_verify_test.py"],
    data = [":testdata"],
    deps = [
        "//rabbitsnark:gnark",
        "//rabbitsnark:groth16",
        "@pypi//absl_py",
        "@pypi//jax",
        "@pypi//zk_dtypes",
    ],
)

_E2E_DATA = [
    ":testdata",
    "@r1cs_solver//solver:libr1cs_solver.so",
]

_E2E_DEPS = [
    "//rabbitsnark:gnark",
    "//rabbitsnark:groth16",
    "@pypi//absl_py",
    "@pypi//jax",
    "@pypi//numpy",
    "@pypi//zk_dtypes",
]

py_test(
    name = "e2e_test",
    srcs = ["e2e_test.py"],
    data = _E2E_DATA,
    deps = _E2E_DEPS,
)

py_test(
    name = "e2e_gpu_test",
    srcs = ["e2e_test.py"],
    data = _E2E_DATA,
    env = {"JAX_PLATFORMS": "cpu,cuda"},
    main = "e2e_test.py",
    tags = ["gpu"],
    deps = _E2E_DEPS + ["@pypi//zkx_cuda_pjrt"],
)
